--- a/forecast_2023-06/law.qmd
+++ b/forecast_2023-06/law.qmd
@@ -44,9 +44,9 @@ Per [Publication 420](https://www.tax.ny.gov/pdf/publications/mctmt/pub420.pdf),
 
 -   Larger employers generally either are required or choose to pay tax under PrompTax, with payments made on the same dates that withholding tax payments are made.
 
-Rules specific to the PMT and how to avoid underpayment penalty are [here](https://www.tax.ny.gov/bus/mctmt/prompt.htm). The PromptTax withholding tax payment rules are [here](https://www.tax.ny.gov/bus/prompt/wt/wttoc2005.htm), with more details [here](https://www.tax.ny.gov/pdf/current_forms/promptax/tr370n.pdf). The withholding tax payment dates are based on business payroll dates, with payment and filing required **three business days following the payroll date**.
+Rules specific to the PMT and how to avoid underpayment penalty are [here](https://www.tax.ny.gov/bus/mctmt/prompt.htm). The PromptTax withholding tax payment rules are [here](https://www.tax.ny.gov/bus/prompt/wt/wttoc2005.htm), with more details [here in Form TR370N](https://www.tax.ny.gov/pdf/current_forms/promptax/tr370n.pdf). The withholding tax payment dates are based on business payroll dates, with payment and filing required **three business days following the payroll date**.
 
-Large employers generally have business payroll periods that are biweekly or semi-monthly -- in other words about every 2 weeks. Thus, we should expect the payroll tax increase to start showing up in the 3rd week of June with some ramping up thereafter. I'll try to figure out a reasonable phase-up schedule. I'd expect more settling up at the end of the July-Sept quarter, at end of October (maybe showing in November collections) although I don't have a guess yet as to how much larger than usual it will be. After that, I'd expect the increase to be fully phased in.
+Large employers generally have business payroll periods that are biweekly or semi-monthly -- in other words about every 2 weeks. Thus, we should expect the payroll tax increase to start showing up in the 3rd week of June with some ramping up thereafter. I'll try to figure out a reasonable phase-up schedule. I'd expect more settling up at the end of the July-Sept quarter, a**t end of October (maybe showing in November collections)** although I don't have a guess yet as to how much larger than usual it will be. After that, I'd expect the increase to be fully phased in.
 
 ### Net earnings from self-employment tax increase
 
